- added RoleConfig - move tests to directories by test type - POM config (add selenium)