@@ -144,6 +144,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Selenium for e2e tests -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+        </dependency>
+
         <!-- ********************* Logging Configuration ********************* -->
 
         <!-- Spring Boot Starter without default logging -->
@@ -195,32 +201,80 @@
                     <classpathDependencyExcludes>
                         <classpathDependencyExclude>org.apache.logging.log4j:log4j-slf4j2-impl</classpathDependencyExclude>
                     </classpathDependencyExcludes>
+                    <!-- Include unit tests located in the 'unit' directory -->
+                    <includes>
+                        <include>**/unit/**/*.java</include>
+                    </includes>
                 </configuration>
             </plugin>
 
-            <!-- Failsafe Plugin for Integration Tests -->
+            <!-- Failsafe Plugin for Integration and E2E Tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
+<!--                <version>3.0.0-M7</version>-->
                 <configuration>
-                    <!-- Include only integration tests with *IT.java suffix -->
-                    <includes>
-                        <include>**/*IT.java</include>
-                    </includes>
-                    <!-- Exclude standard logging implementation from integration tests -->
+                    <!-- JVM arguments for dynamic agent loading -->
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                    <!-- Exclude standard logging implementation from tests -->
                     <classpathDependencyExcludes>
                         <classpathDependencyExclude>org.apache.logging.log4j:log4j-slf4j2-impl</classpathDependencyExclude>
                     </classpathDependencyExcludes>
+                    <!-- System properties for Selenium WebDriver -->
+                    <systemPropertyVariables>
+                        <webdriver.chrome.driver>/path/to/chromedriver</webdriver.chrome.driver>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
+
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-failsafe-plugin</artifactId>-->
+<!--                <executions>-->
+<!--                    &lt;!&ndash; Execution for Integration Tests &ndash;&gt;-->
+<!--                    <execution>-->
+<!--                        <id>integration-tests</id>-->
+<!--                        <phase>integration-test</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>integration-test</goal>-->
+<!--                            <goal>verify</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <includes>-->
+<!--                                <include>**/integration/**/*.java</include>-->
+<!--                            </includes>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                    &lt;!&ndash;Execution for End-to-End Tests &ndash;&gt;-->
+<!--                    <execution>-->
+<!--                        <id>e2e-tests</id>-->
+<!--                        <phase>verify</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>integration-test</goal>-->
+<!--                            <goal>verify</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            &lt;!&ndash; Include e2e tests located in the 'e2e' directory &ndash;&gt;-->
+<!--                            <includes>-->
+<!--                                <include>**/e2e/**/*.java</include>-->
+<!--                            </includes>-->
+<!--                            &lt;!&ndash; System properties for Selenium WebDriver &ndash;&gt;-->
+<!--                            <systemPropertyVariables>-->
+<!--                                <webdriver.chrome.driver>/path/to/chromedriver</webdriver.chrome.driver>-->
+<!--                            </systemPropertyVariables>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--                <configuration>-->
+<!--                    &lt;!&ndash; JVM arguments for dynamic agent loading &ndash;&gt;-->
+<!--                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>-->
+<!--                    &lt;!&ndash; Exclude standard logging implementation from integration tests &ndash;&gt;-->
+<!--                    <classpathDependencyExcludes>-->
+<!--                        <classpathDependencyExclude>org.apache.logging.log4j:log4j-slf4j2-impl</classpathDependencyExclude>-->
+<!--                    </classpathDependencyExcludes>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+
 
             <!-- Maven Compiler Plugin -->
             <plugin>
